# dugout-prophet

./: .gitignore  To-Dos.md  pitcher-model-training.ipynb  predict-fantasy-batting-bayesian.ipynb  predict-fantasy-batting-mvt.ipynb  predict-fantasy-batting-transformer-test.ipynb  predict-fantasy-batting-transformer.ipynb  predict-fantasy-pitching-cnn.ipynb  predict-fantasy-pitching-multivariatetransformer.ipynb  predict-fantasy-pitching-mvt.ipynb  predict-fantasy-pitching-transformer-v3.ipynb  predict_fantasy_batter_2026.ipynb  predict_fantasy_pitcher_2026.ipynb  requirements.txt  scaler.pkl
_archive/: predict-fantasy-batting-bayesian.ipynb  predict-fantasy-batting-transformer.ipynb  predict-fantasy-pitching-cnn.ipynb  predict-fantasy-pitching-transformer-v1.ipynb  predict-fantasy-pitching-transformer-v2.ipynb  predict-fantasy-pitching-transformer-v3.ipynb
batting-predictions/: bayesian-batting-model.ipynb
draft-tools/: hitter-fantasy-model.ipynb  pitcher-fantasy-model.ipynb
hitter-dashboard/: constants.py  dashboard.py  data_pull.py  posterior_update.py  prior_estimation.py
pitcher-dashboard/: MODEL.md  app.py
pitcher-dashboard/notebooks/: pipeline.ipynb  xrv_model.ipynb
pitching-predictions/: bayesian-pitching-model.ipynb
sp-tagger/: dashboard.py
sp-tagger/sp_tagger/: __init__.py  config.py  ingest.py  model.py  pipeline.py  pyproject.toml  tagger.py
src/: cnn_pitcher_model.py  fantasy_predictions.py  mvt_pitcher_model.py  pitcher_eval.py
utils/: fg_batting.py  test_script.ipynb
waiver-tools/: app.py  hitter_app.py  net_power_score.ipynb
(+32 files in other folders)
