[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sp-tagger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pybaseball",
    "numpy",
    "pandas",
    "rich",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sp_tagger*"]
